Aggiunta nuova API per aggiungere ad un ristorante già esistente una nuova fascia oraria
